--- a/src/view/xemchitieu.form
+++ b/src/view/xemchitieu.form
@@ -2,7 +2,7 @@
 
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="0"/>
     <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
       <Point value="[550, 100]"/>
     </Property>
@@ -188,13 +188,14 @@
         <Component class="javax.swing.JTable" name="walletTable">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Corbel" size="20" style="0"/>
+              <Font name="Corbel" size="24" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="3" rowCount="37">
+              <Table columnCount="4" rowCount="37">
                 <Column editable="false" title="Ng&#xe0;y" type="java.lang.String"/>
-                <Column editable="true" title="N&#x1ed9;i dung" type="java.lang.String"/>
-                <Column editable="false" title="S&#x1ed1; ti&#x1ec1;n" type="java.lang.String"/>
+                <Column editable="false" title="N&#x1ed9;i dung" type="java.lang.String"/>
+                <Column editable="false" title="S&#x1ed1; ti&#x1ec1;n" type="java.lang.Long"/>
+                <Column editable="false" title="Tr&#x1ea1;ng th&#xe1;i" type="java.lang.String"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -214,8 +215,14 @@
                   <Editor/>
                   <Renderer/>
                 </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
               </TableColumnModel>
             </Property>
+            <Property name="rowHeight" type="int" value="30"/>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
